--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "iops",
+  "name": "psyexlib",
   "version": "1.0.0",
   "description": "Instrumentarium of psychological support",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,15 +27,16 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^3.1.0"
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
-    "mongodb": "^6.5.0",
-    "mongodb-core": "^3.2.7",
-    "mongoose": "^8.2.1"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0"
   }
 }
